@@ -1,3 +1,9 @@
+2004-10-09  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  Version number is now 0.1200410090
+	(_reg_add)  Atomically change the registration data to 
+	avoid a race condition.  Thanks to SRE.
+
 2004-10-03  Michael Yount <csf@moscow.com>
 
 	* bin/mj_confirm, mj_wwwadm, mj_wwwusr:  Change the debug
